--- a/studio/CRM Ticket Assignment/project.json
+++ b/studio/CRM Ticket Assignment/project.json
@@ -1,6 +1,6 @@
 {
-  "name": "Send Telegram Notifications",
-  "description": "Send Telegram Notifications",
+  "name": "CRM Ticket Assignment",
+  "description": "CRM Ticket Assignment",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.12.3]",
